# pg

./: README.md
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: db.py  deps.py  main.py  models.py
backend/app/db/: core.py  tables.py
backend/app/llm/: sample.py
frontend/: biome.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  amplify-config.ts  main.tsx
frontend/src/components/Container/: AlbumTabs.tsx  Breadcrumbs.tsx  ButtonLink.tsx  FileList.tsx  Header.tsx  LinkButton.tsx  PhotoList.tsx  UploadButton.tsx
frontend/src/components/Pages/: Dashboard.tsx  Download.tsx  Error.tsx  Home.tsx  List.tsx  Root.tsx  Upload.tsx
frontend/src/components/page/: Dashboard.tsx  Download.tsx  Error.tsx  Home.tsx  Root.tsx  Upload.tsx
frontend/src/hooks/: Album.ts  Album.tsx  Photo.ts
frontend/src/models/: Album.ts  Photo.ts
frontend/src/utils/: fetcher.ts
iac/: Makefile  package-lock.json  package.json
iac/lib/: iac-stack.ts
